Options modal added, additional setting implemented, unit and e2e tests added

--- a/public/assets/css/diagram-layer3.css
+++ b/public/assets/css/diagram-layer3.css
@@ -433,3 +433,52 @@
 .setting-modal-container .setting-modal-footer .action {
   width: 100px;
 }
+
+.options-modal-container {
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.options-modal-container .modal-content {
+  background-color: var(--bg-main,#fefefe);
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 300px;
+}
+
+.options-modal-container .options-close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  line-height: 1;
+}
+
+.options-modal-container .options-close:hover,
+.options-modal-container .options-close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.options-modal-container .options-modal-body {
+  margin: 20px 0;
+}
+
+.options-modal-container .options-modal-footer {
+  text-align: right;
+}
+
+.options-modal-container button {
+  padding: 5px 10px;
+  margin-left: 10px;
+}
